{
    "name": "InputController",
    "maps": [
        {
            "name": "Player",
            "id": "23383a24-0d44-4db0-815b-55afa1bb50c1",
            "actions": [
                {
                    "name": "Arm1",
                    "type": "Button",
                    "id": "95be1f88-02e0-438c-b106-01e41aefc3bf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Arm2",
                    "type": "Button",
                    "id": "a0e6675b-4011-4fea-b2cb-47252fdcb3f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Arm3",
                    "type": "Button",
                    "id": "e2816966-343e-417c-a625-4ec4c024c0f2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "StickyArm",
                    "type": "Button",
                    "id": "5e927169-b2f3-4f0b-b4d1-c3fa84184ac6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "PivotStickyArm",
                    "type": "Button",
                    "id": "2e08e7b2-33c9-4eea-91e4-43a90589fd58",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a6433412-e520-46c0-b5d7-6b6d0d09145a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Arm2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4a0679a8-b302-405f-b147-1da76f275d75",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Arm3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa5cc3d8-d594-415e-954c-8f45a65a69b5",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Arm1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0100e706-3a6d-4665-b1e0-809322d90ff3",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StickyArm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "612da263-59e5-42cb-ad80-8e6ceb902426",
                    "path": "<Keyboard>/shift",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PivotStickyArm",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SpawnerPos",
            "id": "6562f977-dc34-4fe1-91f3-fa7ae36b2233",
            "actions": [
                {
                    "name": "Spawn1",
                    "type": "Button",
                    "id": "7ac1fa58-e90b-4bc1-9014-e8456d49f7b1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Spawn2",
                    "type": "Button",
                    "id": "096db272-0665-48bc-ab79-ac86f2babf7a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Spawn3",
                    "type": "Button",
                    "id": "81e7f14c-ba2e-4b35-b4e7-eefa4bc720e2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Spawn4",
                    "type": "Button",
                    "id": "4b955abd-7a2d-4cde-9f33-962a0b4f99ff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Spawn5",
                    "type": "Button",
                    "id": "2ec7d23c-b8db-4cce-96a1-71f514cba946",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Spawn6",
                    "type": "Button",
                    "id": "26046d79-d016-4ba9-ace1-4ac522f4dde0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7d897b2a-3e15-4ed7-8828-3c77ba679f19",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spawn1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24a34cc6-cb9d-492d-b451-0cbe6f7eb010",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spawn2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "691bc94b-b371-4e30-9b37-89dd666051c6",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spawn3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94d9bee0-f2ed-41f8-a29a-98e53b9868b8",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spawn4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bf0df2c3-4382-4565-a183-4a008f9c9acd",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spawn5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9fab6b8e-6058-45cd-b522-b180aefe5cdb",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spawn6",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}